package project.go.game;

public record Point(int x, int y) {

}