package project.go.game;

public enum StoneColour {
    EMPTY, BLACK, WHITE
}
